FIxed spacing and formatting

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,9 +8,10 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+*{
   letter-spacing: -0.08em;
 }
-
 .header{
   padding: 40px 40px 0 40px;
     position: absolute;
@@ -20,7 +21,7 @@ body {
     z-index: 99;
 }
 .top-header{
-  border-bottom: solid 1px #9FA1A680;    padding-bottom: 24px;
+  border-bottom: 1px solid #9FA1A680 ;   padding-bottom: 19px;
 }
 .css-19bb58m{
   display: none!important;
@@ -47,9 +48,7 @@ body {
 }
 .lang-sel div{
   font-size: 13px;
-}
-.lang-sel div{
-  padding: 0;
+  min-height: inherit;padding: 0;
 }
 .lang-sel .css-hlgwow{
 margin: 0;
@@ -79,7 +78,7 @@ margin: 0;
 }
 .banner-txt{
   position: absolute;
-  top: 260px;
+  top: 271px;
   left: 50%;
   transform: translate(-50%,0);
   display: flex;
@@ -88,6 +87,10 @@ margin: 0;
 }
 .bnr-logo{
   margin-bottom: 24px;
+}
+.bnr-logo img{
+  width: 374px;
+  height: auto;
 }
 .banner-txt h1,.banner-txt h2{
   font-weight: 400;
@@ -158,7 +161,7 @@ text-align: right;
 .intro-txt::after,.bookTestDrive:after{
   position: absolute;
   left: 0;
-  top: 216px;
+  top: 232px;
   width: 1055px;
   height: 375px;
   content: '';
@@ -166,9 +169,9 @@ text-align: right;
   background-size: 100% 100%;
 }
 .bookTestDrive:after{
-  top: 252px;width: 1216px;
-  height: 419px;
-  background: url(/images/form-svg-line.svg);
+  top: 261px;width: 1216px;
+  height: 422px;
+  background: url(/images/form-svg-line.svg) no-repeat;
 }
 [lang="ar"] .intro-txt::after,[lang="ar"] .bookTestDrive::after{
   transform: rotateY(180deg);
@@ -183,9 +186,10 @@ text-align: right;
   line-height: 20px;
   color: #2D2926;
   padding-top: 8px;
+  margin-bottom: 0;
 }
 .dtl-text{
-  max-width: 550px;padding-top: 60px;
+  max-width: 550px;padding-top: 120px;
 }
 .dtl-text p{
   font-size: 16px;
@@ -201,9 +205,12 @@ text-align: right;
 }
 
 .videoCarousel .swiper-pagination{  
-    display: flex;
-    justify-content: space-around; 
-    bottom: 40px !important;
+  display: flex;
+  justify-content: space-between;
+  bottom: 40px !important;
+  max-width: 1020px;
+  transform: translate(-50%, 0);
+  left: 50% !important;
 }
 
 .videoCarousel .swiper-pagination-bullet{
@@ -218,7 +225,7 @@ text-align: right;
 .videoCarousel .swiper-pagination-bullet h4,.videoCarousel .swiper-pagination-bullet p{
   font-size: 20px;
   line-height: 24px;
-  font-weight: 600;
+  font-weight: 600;letter-spacing: -0.08em;
   color: #bdb8b5;    margin: 0;
 }
 .videoCarousel .swiper-pagination-bullet-active {
@@ -244,22 +251,22 @@ text-align: right;
   line-height: 48px;
   font-weight: 700;
   color: #2D2926;
-  padding-left: 156px;
-  margin: 0;letter-spacing: -2px;
+  padding-left: 112px;letter-spacing: -0.08em;
+  margin: 0;
 }
 .videoCarousel h3{
   font-size: 30px;
   line-height: 36px;
   font-weight: 400;
   color: #2D2926;
-  padding-left: 156px;letter-spacing: -2px;
-  margin-bottom: 50px;
+  padding-left: 112px;
+  margin-bottom: 50px;letter-spacing: -0.08em;
 }
 [lang="ar"] .videoCarousel h2{
-  padding:0 156px 0 0;
+  padding:0 112px 0 0;
 }
 [lang="ar"] .videoCarousel h3{
-  padding:0 156px 0 0;
+  padding:0 112px 0 0;
 }
 .videoCarousel h3 span{
   color: #FF5B00;
@@ -269,7 +276,7 @@ text-align: right;
 }
 .car-collection h2{
 position: relative;
-padding-top: 64px;
+padding-top: 80px;
 padding-left: 156px;
 font-size: 40px;
   line-height: 48px;
@@ -328,7 +335,7 @@ font-size: 40px;
   align-items: center;
 }
 .car-collection .swiper-button-prev,.car-collection .swiper-button-next{
-  width: 68px;top: 46%;
+  width: 68px;top: 41%;
   height: 68px;
 }
 .car-collection .swiper-button-prev:after,.car-collection .swiper-button-next:after{
@@ -368,6 +375,7 @@ font-size: 40px;
     align-items: center;
     bottom: 0!important;
     position: static;
+    margin-top: 33px;
 }
 .car-collection .swiper-pagination-bullet{
   width: 24px;
@@ -394,11 +402,24 @@ line-height: 50px;
 text-align: left;
 
 }
+.spec-container .col-md-4{
+  padding: 0;
+  width: 317px;
+}
+.spec-container .row{
+  min-width: 1127px;
+  max-width: 1127px;
+  display: flex;
+  justify-content: space-between;
+}
+.spec-container .row .col-md-4:last-child div:after{
+  display: none;
+}
 form{
   position: relative;
   z-index: 999;
   max-width: 896px;
-  margin-top: 80px;
+  margin-top: 100px;
 }
 .form-control{
   border: 0;
@@ -429,7 +450,7 @@ form button{
   height: 51px;
   text-indent: -1000px;
     border: 0;
-    margin:32px 0 113px 0;
+    margin:32px 0 60px 0;
 }
 form .consent span{
   font-size: 12px;
